--- a/05-server/package.json
+++ b/05-server/package.json
@@ -19,6 +19,7 @@
     "concurrently": "^9.1.0",
     "cookie-session": "^2.1.0",
     "express": "^4.21.1",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "reflect-metadata": "^0.2.2"
   }
 }
